<resources>
    <string name="app_name">Easymusic</string>
    <string name="tab_1">音乐</string>
    <string name="tab_2">视频</string>
    <string name="tab_3">电台</string>
    <string name="sort">欢迎来到分类页面</string>
    <string name="person">欢迎来到个人页面</string>
    <string name="home_1">欢迎来到第一主页页面</string>
    <string name="home_2">欢迎来到第二主页页面</string>
    <string name="home_3">欢迎来到第三主页页面</string>
    <string name="loginlogotext">登录E云</string>
    <string name="edittextnumber">请输入手机号码</string>
    <string name="edittextpassword">请输入密码</string>
    <string name="forgivepws">忘记密码?</string>
    <string name="register">新用户注册</string>
    <string name="loginbuttontext">登录</string>
    <string name="defusername">立夏</string>
    <string name="focuson">关注</string>
    <string name="fans">粉丝</string>
    <string name="focusonnum">0</string>
    <string name="fansnum">0</string>
    <string name="resetpwd">重设密码</string>
    <string name="nextstep">下一步</string>
    <string name="verificationcodetext">你会收到一条带验证码的短信，请输入验证码：</string>
    <string name="inputverificationcode">请输入验证码</string>
    <string name="pwdinfo">请设置密码，6-12位</string>
    <string name="registertitlebar">注册</string>
    <string name="nickname">请设置昵称</string>
    <string name="confirmregister">确认注册</string>
    <string name="nowtimemusic">最新音乐</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
