<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transport"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tab_1"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/resetpwd"
            android:textColor="@color/transport"
            android:background="@color/lightblue"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/bestlightblue"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/verificationcodetext"
                android:textSize="15sp" />


        </LinearLayout>


    </LinearLayout>

    <EditText
        android:id="@+id/resetverificationcode"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:hint="@string/inputverificationcode" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:hint="@string/pwdinfo" />

    <Button
        android:id="@+id/resetpwd"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/circleshapestyle"
        android:text="@string/resetpwd"
        android:textColor="@color/transport" />


</LinearLayout>